Closed Bug 1363653 Opened 9 years ago Closed 9 years ago

Repeated Crashes [@ IPCError-content | PAltDataOutputStream::Msg_Error Route error: message sent to unknown actor ID ]

Categories

(Core :: Networking: HTTP, defect)

All
Windows 10
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: ananuti, Assigned: valentin)

References

(Blocks 1 open bug)

Details

(Keywords: crash, Whiteboard: [necko-active])

Crash Data

Attachments

(1 file)

This occurs because of a race in destroying the AltDataOutputStreamChild AltDataOutputStreamChild::Close -> SendClose() AltDataOutputStreamChild::Release -> Send__delete__() AltDataOutputStreamParent::RecvClose() -> SendError() AltDataOutputStreamParent::ActorDestroy -> mIPCOpen = false AltDataOutputStreamChild::RecvError -> === The object has already been destroyed === We need to add releasing mechanism similar to the one in HttpChannelChild/Parent.
Assignee: nobody → valentin.gosu
Whiteboard: [necko-active]
Comment on attachment 8866326 [details] Bug 1363653 - Make AltDataOutputStreamParent not send any messages after object destruction https://reviewboard.mozilla.org/r/137958/#review141642 ::: netwerk/protocol/http/AltDataOutputStreamChild.cpp:18 (Diff revision 1) > MOZ_ASSERT(NS_IsMainThread(), "Main thread only"); > --mRefCnt; > NS_LOG_RELEASE(this, mRefCnt, "AltDataOutputStreamChild"); > > if (mRefCnt == 1 && mIPCOpen) { > - // Send_delete calls NeckoChild::PAltDataOutputStreamChild, which will release > + // Only the reference is in the IPDL one. After the parent replies back with maybe check spelling of the comment
Attachment #8866326 - Flags: review?(honzab.moz) → review+
Pushed by valentin.gosu@gmail.com: https://hg.mozilla.org/integration/autoland/rev/266e09e18a8e Make AltDataOutputStreamParent not send any messages after object destruction r=mayhemer
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: